--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <script src="./calculator-widget.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aliibneimran/calculator/calculator-widget.js"></script>
+
     <script src="https://cdn.jsdelivr.net/gh/aliibneimran/currency_converter/widget.js"></script>
 </body>
 </html>
